--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, html {
 <!-- tapdancing feet-->
 <div class="img-container">
   <img src="assets/img/vienna/giphy copy 4.gif" alt="black and white feet slowdancing" id="selector">
-<div class="overlay-text"><h5>On the train everything seemed fine. <br/>The trouble began in Venice, <br/> with the back-alleys.</h5></div>
+<div class="overlay-dialog center"><h5>On the train everything seemed fine. <br/>The trouble began in Venice, <br/> with the back-alleys.</h5></div>
 </div>
 </div>
 
@@ -77,6 +77,8 @@ body, html {
     </p></div>
   </div> </div></div>
 </div>
+
+
  <!-- Ride to Ravenna -->
  <div class="para-rav">
   <div class="center fullview">
@@ -100,6 +102,27 @@ body, html {
      <div class="img-container"> 
         <img src="assets/img/Ravenna/byzantine-mosaic-of-emperor-justinian-i-basilica-of-san-vitale-in-ravenna-italy-547-ad-paul-williams.jpg" style="height:600px">  
         <div class="overlay-dialog purpletext"> <h4>"Within the Byzantine pictures there was something that stirred a sleeping horror in the depth of their souls ...</h4> <h4> His youth beat within him with such intensity that he suddenly grew faint and had to lean against a pillar. But it lasted only a second, and he was a serious man again.” </h4></div>
+      </div>
+      <div class="img-container"> 
+        <img src="assets/img/cafe/700-00066787en_Masterfile.jpg" style="height:600px">  
+        <div class="overlay-dialog center purpletext"> <h4><span style="color:#7d6fd7";>János arrives on a <br />motorbike at their café</span> </h4>
+
+          <p>“You talk as if you know why I was angry with you.”</p>
+            <p>"But of course I know,” Mihály blurted out, and blushed again.</p>
+              <p>“If you know, say it,” Szepetneki said aggressively.</p>
+                <p>“I’d rather not here ... in front of my wife.”</p>
+                  <p>“It doesn’t bother me. Just have the courage to say it. What do you think was the reason I wouldn’t speak to you in London?”</p>
+                    <p>“Because it occurred to me there had been a time when I thought you had stolen my gold watch. Since then I’ve found out who took it.”</p>
+                      <p>“You see what an ass you are. I was the one who stole your watch.”</p>
+  <p>So it was you who took it?”</p>
+    <p>“It was.”</p>
+      
+          <h4><span style="color:#7d6fd7";>János has traced Ervin to Italy—Tuscany or Umbria in some monastery</span> </h4>
+          <p>"Now that you are in Italy you could help me look for him." </p>
+         <p> "I can't scour the collected monasteries of Umbria and Tuscany. And I don't even know that Ervin would want to see me. If he had wanted to see me he could have let me know his whereabouts long ago. So now you can clear off, János Szteptenki. I hope I don't set eyes on your again for a good few years."</p>
+          —
+          <p>"You're just as clever at not understanding people as you are great at not finding, and not looking for, people who have gone out of your life. That's why I was angry with you."</p>
+          <p>"One grows up. We all grow up, and you forget why you were offended with someone for ten years." </p></div>
       </div>
       </div>
     </div> 
