--- a/author.html
+++ b/author.html
@@ -67,6 +67,8 @@
     </p>
   </div>
 </div>
+<div class="center"><button class="forkbtn" ><a href="index.html">GO ON A JOURNEY</a> </button> </div>
+<div class="spacer"></div>
 
 
 
